# PlayerVideo

./: install_log.txt  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kylin/playervideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Test.cpp  Test.h  VideoChannel.cpp  VideoChannel.h  VideoFFMpeg.cpp  VideoFFMpeg.h  logutil.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/java/com/kylin/playervideo/: MainActivity.kt  VideoPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kylin/playervideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
